--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
        <a href="#shop">SHOP</a>
       <a href="#links">LINKS</a>
     </nav>
-<button class="subscribe-btn" onclick="window.open('https://t.me/basshmaki')">
-  SUBSCRIBE
-</button>
+<button class="subscribe-btn" onclick="window.open('https://t.me/basshmaki')">SUBSCRIBE</button>
   </header>
 
   <main class="main" id="home">
@@ -42,7 +40,7 @@
         <img src="https://i.postimg.cc/MZrFmkP8/photo-2025-07-15-11-54-01.jpg" alt="Roman Rybak">
         <div class="card-content">
           <h2>Roman Rybak</h2>
-          <p>Founder of “Bashmaki”.</p>
+          <p>Founder of “Bashmaki”. The chill guy. Chief of posts at tg.</p>
         </div>
       </div>
     </div>
@@ -77,7 +75,13 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+         <button class="buy-btn" 
+          data-name="Футболка 2" 
+          data-material="Хлопок + Полиэстер" 
+          data-description="Спортивная футболка с лёгким материалом" 
+          data-image="shirt2.png">
+    Купить
+  </button>
       </div>
     </div>
 
@@ -87,7 +91,13 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+          <button class="buy-btn" 
+          data-name="Футболка 2" 
+          data-material="Хлопок + Полиэстер" 
+          data-description="Спортивная футболка с лёгким материалом" 
+          data-image="shirt2.png">
+    Купить
+  </button>
       </div>
     </div>
 
@@ -97,7 +107,13 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+     <button class="buy-btn" 
+          data-name="Футболка 2" 
+          data-material="Хлопок + Полиэстер" 
+          data-description="Спортивная футболка с лёгким материалом" 
+          data-image="shirt2.png">
+    Купить
+  </button>
       </div>
     </div>
 
@@ -107,7 +123,13 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+       <button class="buy-btn" 
+          data-name="Футболка 2" 
+          data-material="Хлопок + Полиэстер" 
+          data-description="Спортивная футболка с лёгким материалом" 
+          data-image="shirt2.png">
+    Купить
+  </button>
       </div>
     </div>
 
@@ -117,7 +139,13 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+        <button class="buy-btn" 
+          data-name="Футболка 2" 
+          data-material="Хлопок + Полиэстер" 
+          data-description="Спортивная футболка с лёгким материалом" 
+          data-image="shirt2.png">
+    Купить
+  </button>
       </div>
     </div>
 
@@ -127,7 +155,7 @@
       <div class="product-overlay">
         <h3>Футболка</h3>
         <p>Цена: 1990₽</p>
-        <a href="https://t.me/basshmaki" target="_blank" class="buy-btn">Купить</a>
+         <button class="buy-btn">Купить</button>
       </div>
     </div>
   </div>
@@ -164,7 +192,7 @@
     </div>
 
     <div class="footer-bottom">
-      <p>© 2025 BASHMAKI. Crafted with Created with love.</p>
+      <p>© 2025 BASHMAKI. Created with love.</p>
     </div>
   </footer>
 
@@ -175,6 +203,107 @@
     <img src="https://i.postimg.cc/K8cf6JsK/Vector.png" alt="graf" class="graf-img">
   </div>
 </section>
+
+<!-- COOKIE CONSENT -->
+<div class="cookie-consent" id="cookieConsent">
+  <div class="cookie-text">
+    Наш сайт использует куки.<br>
+    Продолжая им пользоваться, Вы соглашаетесь на обработку персональных данных в соответствии с
+    <a href="#">политикой конфиденциальности</a>.
+  </div>
+  <button id="cookieAcceptBtn" title="Принять">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path d="M20.285 6.709a1 1 0 0 0-1.414-1.418l-9.192 9.186-4.243-4.244a1 1 0 0 0-1.414 1.414l4.95 4.95a1 1 0 0 0 1.414 0l9.899-9.888z"/>
+    </svg>
+  </button>
+</div>
+
+<script>
+  const cookieBox = document.getElementById('cookieConsent');
+  const cookieBtn = document.getElementById('cookieAcceptBtn');
+
+  // Проверяем, было ли уже одобрение
+  if (!localStorage.getItem('cookieAccepted')) {
+    cookieBox.classList.remove('hidden');
+  }
+
+  // При клике на галочку — скрываем и сохраняем состояние
+  cookieBtn.addEventListener('click', () => {
+    cookieBox.classList.add('hidden');
+    localStorage.setItem('cookieAccepted', 'true');
+  });
+</script>
+
+<!-- МОДАЛЬНОЕ ОКНО -->
+<div class="modal-overlay" id="modalOverlay">
+  <div class="modal">
+    <button class="close-btn" id="closeModal">&times;</button>
+    <div class="modal-content">
+      <div class="modal-info">
+        <h2>Футболка 21</h2>
+        <p class="material">Материал<br><span>Хлопок 100%</span></p>
+        <p class="desc">Описание<br><span>Lorem ipsum dolor sit amet, qui blanditiis praesentium voluptatum deleniti atque corrupti!</span></p>
+
+        <p class="size-label">Выбрать размер</p>
+        <div class="sizes">
+          <button class="size">42</button>
+          <button class="size">43</button>
+          <button class="size">44</button>
+          <button class="size">45</button>
+          <button class="size">46</button>
+          <button class="size">47</button>
+        </div>
+
+        <p class="price">Цена<br><span>1990₽</span></p>
+        <button class="order-btn">Заказать</button>
+      </div>
+      <div class="modal-image">
+        <img src="https://i.postimg.cc/dQ92mG5Y/tsirth.png" alt="Футболка">
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+  const buyButtons = document.querySelectorAll('.buy-btn');
+  const modalOverlay = document.getElementById('modalOverlay');
+  const closeModal = document.getElementById('closeModal');
+  const sizes = document.querySelectorAll('.size');
+
+  // функция открытия модалки
+  const openPopup = () => {
+    modalOverlay.classList.add('active');
+    document.body.style.overflow = 'hidden'; // 🚫 блокируем скролл
+  };
+
+  // функция закрытия модалки
+  const closePopup = () => {
+    modalOverlay.classList.remove('active');
+    document.body.style.overflow = ''; // ✅ возвращаем скролл
+  };
+
+  // навешиваем обработчик на каждую кнопку "Купить"
+  buyButtons.forEach(btn => {
+    btn.addEventListener('click', openPopup);
+  });
+
+  // закрытие по крестику
+  closeModal.addEventListener('click', closePopup);
+
+  // закрытие по клику вне окна
+  modalOverlay.addEventListener('click', (e) => {
+    if (e.target === modalOverlay) closePopup();
+  });
+
+  // выбор размера
+  sizes.forEach(btn => {
+    btn.addEventListener('click', () => {
+      sizes.forEach(b => b.classList.remove('active'));
+      btn.classList.add('active');
+    });
+  });
+</script>
+
 
 </body>
 </html>
